# RaGGym-Chatbot-CLI

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TECHSTACK.md  api.py  app.py  guide.md  ingest.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  deploy.yml  security.yml
.streamlit/: config.toml  secrets.toml.example
config/: settings.py
core/: logging.py
docs/: AZURE_SETUP.md  tesla.txt
endpoints/: rag_assistant_endpoint.py
eval/: evaluate.py  sample_questions.json
rag/: chain.py  chunkers.py  embeddings.py  llm.py  loaders.py  vectorstore.py
scripts/: new-pr.sh
src/raggym/: __init__.py  cli.py  vectorstore.py
src/raggym/agents/: __init__.py  chat_graph.py
src/raggym/apps/: __init__.py  browser_ide.py  chat_app.py  practice_app.py
src/raggym/config/: __init__.py  settings.py
src/raggym/core/: __init__.py  logging.py
src/raggym/embeddings/: __init__.py  _fastembed.py  factory.py
src/raggym/eval/: __init__.py  questions.json  runner.py
src/raggym/ingestion/: __init__.py  cache.py  captioning.py  dedup.py  pipeline.py  report.py
src/raggym/ingestion/chunkers/: __init__.py  fixed.py  markdown.py  semantic.py  strategies.py
src/raggym/ingestion/parsers/: __init__.py  pdf.py  text.py
src/raggym/llm/: __init__.py  factory.py
src/raggym/practice/: __init__.py  cli.py  generator.py  grader.py  models.py  reviewer.py  service.py  workspace.py
src/raggym/retrieval/: __init__.py  engine.py  rerank.py
templates/: README.md
templates/01-simple-chatbot/: .env.example  README.md  app.py  requirements.txt
templates/02-document-qa-rag/: README.md  app.py  ingest.py  requirements.txt
templates/02-document-qa-rag/docs/: sample_financials.txt
templates/03-conversational-rag/: .env.example  README.md  app.py  ingest.py
templates/04-hybrid-search-rag/: .env.example  README.md  app.py  ingest.py  requirements.txt
templates/05-reranking-rag/: .env.example  README.md  app.py  ingest.py  requirements.txt
templates/06-multi-query-rag/: README.md  app.py  ingest.py  requirements.txt
templates/06-multi-query-rag/docs/: sample_financials.txt
templates/07-agentic-rag/: .env.example  README.md  app.py  ingest.py  requirements.txt
templates/07-agentic-rag/docs/: sample_financials.txt
templates/08-sql-agent/: .env.example  README.md  app.py  requirements.txt  setup_db.py
templates/09-multi-agent-analyst/: .env.example  README.md  app.py  graph.py  ingest.py
templates/09-multi-agent-analyst/docs/: sample_financials.txt
templates/10-corrective-rag/: README.md  app.py  graph.py  ingest.py  requirements.txt
templates/10-corrective-rag/docs/: sample_financials.txt
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/: test_agents.py  test_browser_ide.py  test_cache.py  test_captioning.py  test_chunk_strategies.py  test_chunkers.py  test_config.py  test_dedup.py  test_eval.py  test_ingestion.py  test_practice.py  test_report.py  test_retrieval.py
